Bugfix 5045 - New UI: The lower box on data field properties gets cut off when selecting a field type

--- a/Website/Composite/styles/default/fields/fields-base.less
+++ b/Website/Composite/styles/default/fields/fields-base.less
@@ -106,7 +106,7 @@ ui|editorpage {
                 border-top-right-radius: @base-border-radius;
             }
 
-            &.last {
+            &.last, &:last-of-type {
                 padding-bottom: 25px;
                 border-bottom-width: 1px;
                 border-bottom-left-radius: @base-border-radius;
